--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-  <!-- badges: start -->
-  [![R-CMD-check](https://github.com/hypertidy/tissot/workflows/R-CMD-check/badge.svg)](https://github.com/hypertidy/tissot/actions)
-  <!-- badges: end -->
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/hypertidy/tissot/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/hypertidy/tissot/actions/workflows/R-CMD-check.yaml)
+<!-- badges: end -->
 
 # tissot
 
