default to axes and circles

--- a/README.Rmd
+++ b/README.Rmd
@@ -63,7 +63,7 @@ undistorted reference; the filled ellipse shows the projection's distortion:
 xy <- expand.grid(seq(-150, 150, by = 30), seq(-60, 60, by = 30))
 r <- tissot(xy, "+proj=robin")
 ii <- indicatrix(r)
-plot(ii, scale = 6e5, add = FALSE)
+plot(ii, scale = 6e5, add = FALSE, show.axes  = TRUE, show.circle = TRUE)
 tissot_map()
 ```
 
