better examples for readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -100,18 +100,47 @@ ii2 <- indicatrix(c(147, -42), "+proj=lcc +lat_1=-36 +lat_2=-38 +lat_0=-37 +lon_
 plot(ii2[[1]], scale = 1e4, add = FALSE, show.axes = TRUE, show.circle = TRUE)
 ```
 
+## Arbitrary projections
+
+Lambert Conformal Conic
+
+```{r lcc}
+pxy <- expand.grid(seq(100, 200, by = 25), seq(-75, -45, by = 10))
+p <- tissot(pxy, "+proj=lcc +lat_0=-60 +lon_0=147 +lat_1=-70 +lat_2=-55")
+plot(indicatrix(p), scale = 3e5, add = FALSE, fill.by = "scale.area")
+tissot_map()
+```
+
+Universal Transverse Mercator
+
+```{r utm}
+qxy <- expand.grid(seq(100, 200, by = 25), seq(-75, -45, by = 10))
+p <- tissot(qxy, "EPSG:32755")
+plot(indicatrix(p), scale = 3e5, add = FALSE, fill.by = "scale.area")
+tissot_map()
+```
+
+
 ## Polar projections
 
 ```{r polar}
-polar_xy <- expand.grid(seq(-180, 150, by = 30), seq(-85, -30, by = 10))
+polar_xy <- expand.grid(seq(-180, 150, by = 30), seq(-80, -50, by = 10))
 p <- tissot(polar_xy, "+proj=stere +lat_0=-90 +lon_0=147")
-plot(indicatrix(p), scale = 5e5, add = FALSE, fill.by = "scale.area")
+plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale.area")
 tissot_map()
 ```
 
 ```{r laea}
 la <- tissot(polar_xy, "+proj=laea +lat_0=-90 +lon_0=147")
-plot(indicatrix(la), scale = 5e5, add = FALSE)
+plot(indicatrix(la), scale = 2.5e5, add = FALSE)
+tissot_map()
+```
+
+Let's push away from the pole in Lambert Azimuthal Equidistant
+
+```{r aeqd}
+lea <- tissot(polar_xy, "+proj=aeqd +lat_0=-20 +lon_0=147")
+plot(indicatrix(lea), scale = 2.5e5, add = FALSE)
 tissot_map()
 ```
 
