--- a/README.Rmd
+++ b/README.Rmd
@@ -128,6 +128,9 @@ tissot_map()
 
 ## Polar projections
 
+In any projection we should refer to a regular grid of points in it's crs, else we get weird situations like this, more obvious on an actual pole: 
+
+
 ```{r polar}
 polar_xy <- expand.grid(seq(-180, 150, by = 30), seq(-80, -50, by = 10))
 p <- tissot(polar_xy, "+proj=stere +lat_0=-90 +lon_0=147")
@@ -141,13 +144,40 @@ plot(indicatrix(la), scale = 2.5e5, add = FALSE)
 tissot_map()
 ```
 
-Let's push away from the pole in Lambert Azimuthal Equidistant
+If we push away from the pole in Lambert Azimuthal Equidistant it's useful to see what happens. 
 
 ```{r aeqd}
 lea <- tissot(polar_xy, "+proj=aeqd +lat_0=-20 +lon_0=147")
 plot(indicatrix(lea), scale = 2.5e5, add = FALSE)
 tissot_map()
 ```
+
+Far better is to generate a grid in the crs we are assessing. 
+
+```{r polar-proj}
+op <- par(mfrow = c(1, 2))
+ext <- c(-180, 150, -80, -50)
+crs <- "+proj=stere +lat_0=-90 +lon_0=147"
+projext <- gdalraster::bbox_transform(ext[c(1, 3, 2, 4)], srs_to = crs, srs_from = "EPSG:4326")
+
+polar <- expand.grid(seq(projext[1L], projext[3L], by = 30 * 1e5), seq(projext[2], projext[4], by = 10 * 1e5))
+polar_xy <- gdalraster::transform_xy(polar, srs_to = "EPSG:4326", srs_from = crs)
+p <- tissot(polar_xy, crs, source = "EPSG:4326")
+plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale.area")
+tissot_map()
+
+ext <- c(-180, 150, -80, -50)
+crs <- "+proj=laea +lat_0=-90 +lon_0=147"
+projext <- gdalraster::bbox_transform(ext[c(1, 3, 2, 4)], srs_to = crs, srs_from = "EPSG:4326")
+
+polar <- expand.grid(seq(projext[1L], projext[3L], by = 30 * 1e5), seq(projext[2], projext[4], by = 10 * 1e5))
+polar_xy <- gdalraster::transform_xy(polar, srs_to = "EPSG:4326", srs_from = crs)
+p <- tissot(polar_xy, crs, source = "EPSG:4326")
+plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale.area")
+tissot_map()
+
+```
+
 
 ## Distortion summary
 
