rename scale dots

--- a/README.Rmd
+++ b/README.Rmd
@@ -48,14 +48,48 @@ library(tissot)
 tissot(c(147, -42), "+proj=utm +zone=55 +south")
 ```
 
-Columns include: `scale.h` (meridional), `scale.k` (parallel), `scale.a` /
-`scale.b` (max/min singular values), `scale.area`, `angle_deformation`, and
+Columns include: `scale_h` (meridional), `scale_k` (parallel), `scale_a` /
+`scale_b` (max/min singular values), `scale_area`, `angle_deformation`, and
 `convergence`.
 
 ## Plotting indicatrixes
 
 `indicatrix()` builds plottable ellipses. The dashed circle is the
-undistorted reference; the filled ellipse shows the projection's distortion:
+undistorted reference; the filled ellipse shows the projection's distortion. 
+
+```{r utm55}
+xy <- expand.grid(x = seq(0, 1e6, length.out = 5), y = seq(4900000, 5700000, length.out = 4))
+lonlat <- tissot_unproject(xy, source = "+proj=utm +zone=55 +south")
+tis <- tissot(lonlat, "+proj=utm +zone=55 +south")
+plot(indicatrix(tis), scale = 3e4)
+tissot_map()
+```
+
+What does that top left indicatrix look like? 
+
+```{r topleft}
+plot(indicatrix(tis)[1])
+```
+
+Far from our UTM zone we are in a lot more  trouble. 
+
+```{r very-bad-trouble}
+## UTM zone 55 is at 147 longitude (55 * 6 - 183)
+tis <- tissot(cbind(100, -42), "+proj=utm +zone=55 +south")
+plot(indicatrix(tis))
+
+##  In Mercator we have well known problems 
+tis <- tissot(cbind(147, -42), "+proj=merc")
+plot(indicatrix(tis))
+
+## close to the equator Mercator is ok (in exactly the same way that UTM Zone 55 is ok near 147E longitude)
+tis <- tissot(cbind(147, 0), "+proj=merc")
+plot(indicatrix(tis))
+
+```
+
+Map projection is arbitrary. 
+
 
 ```{r robinson}
 xy <- expand.grid(seq(-150, 150, by = 30), seq(-60, 60, by = 30))
@@ -65,12 +99,25 @@ plot(ii, scale = 6e5, add = FALSE, show.axes  = TRUE, show.circle = TRUE)
 tissot_map()
 ```
 
+### Distortion summary
+
+```{r summary}
+summary(r)
+```
+
+
+
 ## Colour-coded distortion
 
 Pass `fill.by` to colour ellipses by a distortion metric:
 
 ```{r coloured}
-plot(ii, scale = 6e5, add = FALSE, fill.by = "scale.area")
+plot(ii, scale = 6e5, add = FALSE, fill.by = "scale_area")
+tissot_map()
+```
+
+```{r angle_deformation}
+plot(ii, scale = 6e5, add = FALSE, fill.by = "angle_deformation")
 tissot_map()
 ```
 
@@ -112,7 +159,7 @@ Lambert Conformal Conic
 ```{r lcc}
 pxy <- expand.grid(seq(100, 200, by = 25), seq(-75, -45, by = 10))
 p <- tissot(pxy, "+proj=lcc +lat_0=-60 +lon_0=147 +lat_1=-70 +lat_2=-55")
-plot(indicatrix(p), scale = 3e5, add = FALSE, fill.by = "scale.area")
+plot(indicatrix(p), scale = 3e5, add = FALSE, fill.by = "scale_area")
 tissot_map()
 ```
 
@@ -121,20 +168,20 @@ Universal Transverse Mercator
 ```{r utm}
 qxy <- expand.grid(seq(100, 200, by = 25), seq(-75, -45, by = 10))
 p <- tissot(qxy, "EPSG:32755")
-plot(indicatrix(p), scale = 3e5, add = FALSE, fill.by = "scale.area")
+plot(indicatrix(p), scale = 3e5, add = FALSE, fill.by = "scale_area")
 tissot_map()
 ```
 
 
 ## Polar projections
 
-In any projection we should refer to a regular grid of points in it's crs, else we get weird situations like this, more obvious on an actual pole: 
+In any projection we should refer to a regular grid of points in its crs, else we get weird situations like this, more obvious on an actual pole: 
 
 
 ```{r polar}
 polar_xy <- expand.grid(seq(-180, 150, by = 30), seq(-80, -50, by = 10))
 p <- tissot(polar_xy, "+proj=stere +lat_0=-90 +lon_0=147")
-plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale.area")
+plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale_area")
 tissot_map()
 ```
 
@@ -152,7 +199,9 @@ plot(indicatrix(lea), scale = 2.5e5, add = FALSE)
 tissot_map()
 ```
 
-Far better is to generate a grid in the crs we are assessing. 
+## Consider generating input in the crs you are assessing
+
+As with the UTM example above with `tissot_unproject()` it is usually far better is to generate a grid in the crs we are assessing. A grid in lon/lat won't be very meaningful in many projections depending on the context.  
 
 ```{r polar-proj}
 op <- par(mfrow = c(1, 2))
@@ -161,9 +210,9 @@ crs <- "+proj=stere +lat_0=-90 +lon_0=147"
 projext <- gdalraster::bbox_transform(ext[c(1, 3, 2, 4)], srs_to = crs, srs_from = "EPSG:4326")
 
 polar <- expand.grid(seq(projext[1L], projext[3L], by = 30 * 1e5), seq(projext[2], projext[4], by = 10 * 1e5))
-polar_xy <- gdalraster::transform_xy(polar, srs_to = "EPSG:4326", srs_from = crs)
+polar_xy <- tissot_unproject(polar, "EPSG:4326", source = crs)
 p <- tissot(polar_xy, crs, source = "EPSG:4326")
-plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale.area")
+plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale_area")
 tissot_map()
 
 ext <- c(-180, 150, -80, -50)
@@ -171,19 +220,13 @@ crs <- "+proj=laea +lat_0=-90 +lon_0=147"
 projext <- gdalraster::bbox_transform(ext[c(1, 3, 2, 4)], srs_to = crs, srs_from = "EPSG:4326")
 
 polar <- expand.grid(seq(projext[1L], projext[3L], by = 30 * 1e5), seq(projext[2], projext[4], by = 10 * 1e5))
-polar_xy <- gdalraster::transform_xy(polar, srs_to = "EPSG:4326", srs_from = crs)
+polar_xy <- tissot_unproject(polar, "EPSG:4326", source = crs)
 p <- tissot(polar_xy, crs, source = "EPSG:4326")
-plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale.area")
+plot(indicatrix(p), scale = 2.5e5, add = FALSE, fill.by = "scale_area")
 tissot_map()
-
+par(op)
 ```
 
-
-## Distortion summary
-
-```{r summary}
-summary(r)
-```
 
 
 ## Why this package?
